no se toy re quemado bldo

--- a/src/componentes/FacebookloginCs.css
+++ b/src/componentes/FacebookloginCs.css
@@ -23,15 +23,17 @@ footer {
     background-color: #ffffff;
 }
 
+
 .row {
     display: flex;
     justify-content: space-around;
     align-content: center;
+    align-self: center;
     width: 100%;
     max-width: 1000px;
-    /*position: absolute;*/
-    /*left: 50%;*/
-    /*top: 50%;*/
+    position: absolute;
+    left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
 }
 
