--- a/src/componentes/Iniciosesion/FacebookloginCs.css
+++ b/src/componentes/Iniciosesion/FacebookloginCs.css
@@ -7,7 +7,7 @@
            
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #f0f2f5;
+    background-color: #363636;
     color: #1c1e21;
 }
 
