--- a/src/componentes/Registro/RegistrarseCss.css
+++ b/src/componentes/Registro/RegistrarseCss.css
@@ -1,5 +1,5 @@
 .formStyle{
-  width: 30%;
+ 
 
 }
 #Cartita {
@@ -8,7 +8,9 @@
   margin: 0 auto; 
   float: none; 
   margin-bottom: 10px; 
-  margin-top: 10%;
+  margin-top: 5%;
+  border-width: thick;
+  border-radius: 30px;
 }
  
 #Contenedor{
@@ -16,4 +18,8 @@
   align-content: center;
   align-self: center;
   text-align: center;
+  padding: 5%;
+  height: 100vh;
+  background-color: #243042;
 }
+
