--- a/src/componentes/Paginaprincipal/NavbarCss.css
+++ b/src/componentes/Paginaprincipal/NavbarCss.css
@@ -1,5 +1,5 @@
 .site-title img{
-    max-width: 175px;
+    max-width: 275px;
 }
 
 *{
@@ -9,7 +9,6 @@
 
 body{
     margin: 0;
-    
 }
 
 .nav{
@@ -17,9 +16,10 @@ body{
     color: white;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     gap: 2rem;
     padding: 0 1rem;
+    font-size: 18px;
 }
 
 
@@ -29,11 +29,17 @@ body{
     list-style: none;
     display: flex;
     gap: 1rem;
+    
 }
 
 .nav a{
     color: inherit;
     text-decoration: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: .25rem;
+
 }
 
 .nav li.active{
@@ -42,6 +48,10 @@ body{
 
 .nav li:hover{
     background-color: #777;
+}
+
+#fotona{
+    max-width: 25px;
 }
 
 
