--- a/src/componentes/Iniciosesion/IniciosesionCss.css
+++ b/src/componentes/Iniciosesion/IniciosesionCss.css
@@ -143,9 +143,10 @@ main {
 #mailGroup{
     align-items: center;
     align-content: center;
-    align-self: center;
-    text-align: center;
-    margin-bottom: 5%;
+    text-align: center; 
+    padding-left: 3%;
+    padding-right: 30%;
+    padding-bottom: 5%;
 }
 
 
