--- a/src/componentes/PaginaprincipalALU/PaginaprincipalCss.css
+++ b/src/componentes/PaginaprincipalALU/PaginaprincipalCss.css
@@ -5,6 +5,8 @@
 .columnaInutil{
     padding: 0% !important;
     padding-right: 0% !important;
+    margin-right: 0% !important;
+    height: 500% !important;
 }
 
 .divNav{
