--- a/src/componentes/Cards/CardsCss.css
+++ b/src/componentes/Cards/CardsCss.css
@@ -88,3 +88,49 @@ a{
     text-decoration: none;
     font-weight: bold;
 } */
+
+
+.vh-100{
+    overflow-x : hidden;
+    
+}
+
+div.vh-100::-webkit-scrollbar{
+    width: 5px;
+    
+}
+
+div.vh-100::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+    overflow-x : hidden;
+}
+
+div.vh-100::-webkit-scrollbar-thumb {
+    background:#e9da91; 
+    border-radius: 5px;
+    
+    }
+div.vh-100::-webkit-scrollbar-thumb:hover {
+        background:rgb(54, 56, 58); 
+        
+    }
+        
+
+
+::-webkit-scrollbar {
+    width: 10px;}  
+    
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 5px grey; 
+border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+
+border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+background:rgb(54, 56, 58); }
+
