--- a/src/componentes/Iniciosesion/IniciosesionCss.css
+++ b/src/componentes/Iniciosesion/IniciosesionCss.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #0e0d0d;
-    color: #1c1e21;
+    color: white;
 }
 
 main {
