--- a/src/componentes/Navbar/NavbarCss.css
+++ b/src/componentes/Navbar/NavbarCss.css
@@ -13,14 +13,14 @@ body{
 
 .nav{
     background: #e9da91;
-    color: white;
+    color: black;
     display: flex;
     border-bottom: 5px solid rgb(238, 166, 10);
     justify-content: space-between;
     align-items: stretch;
     gap: 2rem;
     padding: 0 1rem;
-    font-size: 18px;
+    font-size: 24px;
     
     
 }
@@ -36,13 +36,22 @@ body{
 }
 
 .nav a{
-    color: inherit;
+    color: black;
     text-decoration: none;
     height: 100%;
     display: flex;
     align-items: center;
     padding: .25rem;
 
+}
+#nav-dropdown{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: .25rem;
 }
 
 .nav li.active{
