--- a/src/componentes/LandingPage/LandingPageCss.css
+++ b/src/componentes/LandingPage/LandingPageCss.css
@@ -29,10 +29,28 @@
     margin-bottom: 20px;
 }
 
+.aboutUs-text h2{
+    color: white;
+    font-size: 40px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.aboutUs-text hr{
+    color: white;
+}
+
 .aboutUs-text h5{
     color: white;
     font-size: 25px;
     text-transform: capitalize;
+    margin-bottom: 25px;
+    letter-spacing: 2px;
+}
+
+.aboutUs-text h6{
+    color: white;
+    font-size: 15px;
     margin-bottom: 25px;
     letter-spacing: 2px;
 }
