--- a/src/componentes/PaginaprincipalALU/FiltroCss.css
+++ b/src/componentes/PaginaprincipalALU/FiltroCss.css
@@ -40,10 +40,11 @@
     display:flex;
     align-content: center;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     justify-items: center;
     justify-self: center;
     margin-top: 10%;
+    
 }
 
 
